qtmux: deprecate the streamable property for non-fragmented MP4

The streamable property only makes sense for fragmented MP4.
https://bugzilla.gnome.org/show_bug.cgi?id=707242